# iac-learn

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.workspace.yml  post-create.sh
.devcontainer/vscode/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
cloudformation/: root.yaml
cloudformation/params/: local.example.json  prod.example.json
cloudformation/stacks/: ecs-fargate.yaml  lambda.yaml  network.yaml  stepfunctions.yaml
scripts/: awslocal  tflocal
src/fargate/: Dockerfile  app.py
src/lambda/: handler.py
terraform/environments/local/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/ecs_fargate/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/ssm/: main.tf  outputs.tf  variables.tf
terraform/modules/stepfunctions/: main.tf  outputs.tf  variables.tf
tests/fargate/: test_app.py
tests/integration/: conftest.py  test_lambda_invoke.py  test_stepfunctions.py
tests/lambda/: test_handler.py
