[project]
name = "iac-learn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "awscli-local>=0.22.2",
  "boto3>=1.35.0",
  "pre-commit>=4.5.1",
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.2",
  "terraform-local>=0.11.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-branch --cov-report=term-missing --ignore=tests/integration"

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
extraPaths = ["src"]
